[Feat] Create Google OAuth2 route to generate JWT for authentication
